# pcmon

./: Cargo.toml  docker-compose.yaml
src/: diskstats.rs  liquidctl.rs  main.rs  nvidia_smi.rs
