[package]
name = "pcmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmedium = "0.6.0"
influx_db_client = "0.5.1"
sysinfo = "0.23.5"
regex = "1.5.5"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_json = "1.0.79"
